cleaned up sampling scripts

--- a/scripts/plot_harmonization/data_akava_turboveg_read.ipynb
+++ b/scripts/plot_harmonization/data_akava_turboveg_read.ipynb
@@ -28,7 +28,46 @@
    "execution_count": 2,
    "id": "0cb82852-5e6e-49c3-8ace-54aca5b07372",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GEE token expired. Use Jupyter Lab to authenticate\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=93CyM3I2dvt_4JX2AU_f5PmPWeDD3ekvPRlZU6ATFiU&tc=PJRfTKnfw1Okdzrb50aJYCP4DafSyz5r5AWCyFsIENM&cc=NT7xcE8XU-8AKQNdlIy9TzQEIu-NL9YQvXnMRCUW2Kg>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=93CyM3I2dvt_4JX2AU_f5PmPWeDD3ekvPRlZU6ATFiU&tc=PJRfTKnfw1Okdzrb50aJYCP4DafSyz5r5AWCyFsIENM&cc=NT7xcE8XU-8AKQNdlIy9TzQEIu-NL9YQvXnMRCUW2Kg</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter verification code:  4/1AfJohXnSF0ZSTycBdMKZFOsgwmDbPhIDSP8RObVpr4SDeF8QDacUXWlC7Pw\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    ee.Initialize()\n",
