create grass log files while mosaicking

--- a/scripts/etc/download_s1.ipynb
+++ b/scripts/etc/download_s1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "3a88e0d8-e4e1-40cd-bcc9-6988b0de698b",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "05514cac-fc3d-4832-9090-f58d618b5b95",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "5b6ba5a4-3dba-49ea-a864-e58479c40e2f",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "6b0d1005-a285-4c94-ab32-7eb6eb03a194",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "f157dc83-555d-40b1-9fff-ca61334473a7",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "e4b0461e-acc9-4376-a098-534b7fd14b44",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "973f1701-794b-4252-b50f-36cc59edf216",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "f1f01e55-6177-4e50-838b-ab26a6cbac9c",
    "metadata": {},
    "outputs": [],
@@ -591,8 +591,8 @@
     "    # get urls\n",
     "    for f in range(len(metadata['features'])):    \n",
     "        url = metadata['features'][f]['properties']['url']\n",
-    "        if os.path.isfile(outpath) == False:\n",
-    "            all_urls.append(url)"
+    "        #if os.path.isfile(outpath) == False:\n",
+    "        all_urls.append(url)"
    ]
   },
   {
