regression scripts and cleanup

--- a/scripts/fCoverRegression/FeaturePreparationDemo.ipynb
+++ b/scripts/fCoverRegression/FeaturePreparationDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d22c7a4a-1633-4f3c-92a8-98d3570215e0",
+   "id": "266c2ab7",
    "metadata": {},
    "source": [
     "### intro\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4358a4f5-c9f6-4860-8413-9a18319c9f2f",
+   "id": "26a19d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4abce12e-f1cd-4d09-a7c9-630d371f528c",
+   "id": "e7402827",
    "metadata": {},
    "source": [
     "#### load an example multispectra file\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b70c9c6f-11a6-4493-8b86-469b08680500",
+   "id": "0ba8b59b",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6876a14-c4b5-410c-81a0-f691bc6f2c2f",
+   "id": "9074ef73",
    "metadata": {},
    "source": [
     "#### rescale and rename the spectral band of S2"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "851d1fa8-3700-4d2a-93c9-11aaae781e72",
+   "id": "90f45714",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
     "band = ['B2_median', 'B3_median', 'B4_median', 'B5_median', 'B6_median', 'B7_median', 'B8A_median', 'B8_median',\n",
     "        'B11_median', 'B12_median']\n",
     "\n",
-    "# remote any entry with no band info, skip this if you have filled every empty entry.\n",
+    "# remove any entry with no band info, skip this if you have filled every empty entry.\n",
     "spectra = spectra.dropna(subset=band, how='any')  \n",
     "\n",
     "#rescaled to 0-1, check the original data to ensure it has not been scaled yet.\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd22591b-befa-4b5e-9f37-30bf21b401f3",
+   "id": "ed68e1a6",
    "metadata": {},
    "source": [
     "#### vegetation indices used for adding feature info"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "01c6510c-018a-4848-9d0e-3172b40f817a",
+   "id": "175d5cc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "35f6204b-9eb2-4f4f-a179-882fb306a42e",
+   "id": "465f7d56",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cbe3819c-6e10-47e8-8996-dd8f6f6163af",
+   "id": "d1e8b6f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "aac0dd56-b462-45ee-a45f-0633e98acf05",
+   "id": "f0295001",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f1b811-e011-4138-b71f-7ea3ca291e23",
+   "id": "a22bcd41",
    "metadata": {},
    "source": [
     "#### check if the generated features consistent with the FeatureDemo"
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4542897a-8233-4f9a-baf2-586b5a677e94",
+   "id": "c4dcbd77",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7c72354e-84a5-4676-a7a0-f7b04db32591",
+   "id": "670b9ceb",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ffa7144-f88a-44dc-8d91-2c5bf3686218",
+   "id": "29e8445b",
    "metadata": {},
    "source": [
     "#### below shows how to load the pickled model for each PFT and do prediction"
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "91ba9c29-e434-4a7e-8cf6-16ee78946802",
+   "id": "acbbad89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
