--- a/scripts/plot_harmonization/data_abr_els_read.ipynb
+++ b/scripts/plot_harmonization/data_abr_els_read.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "050cbd0b-342f-493a-83fe-22c38abef91a",
    "metadata": {},
    "outputs": [],
@@ -24,15 +24,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "46074613-6d83-4010-aed0-f56180c19c8f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*** Earth Engine *** Share your feedback by taking our Annual Developer Satisfaction Survey: https://google.qualtrics.com/jfe/form/SV_doiqkQG3NJ1t8IS?source=API\n"
+      "GEE token expired. Use Jupyter Lab to authenticate\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=XFedqKI5VMDs6I5IM83btX6sKoBaA3Glyv8bzH28ozc&tc=OB5gdu_ZINb67Cs9X2wihlV80siwBSusW6hMdUhXECk&cc=_H9BhgIh6p3VixJj7UUNmiqgFVZw7tGEqE5iZo2JkNk>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=XFedqKI5VMDs6I5IM83btX6sKoBaA3Glyv8bzH28ozc&tc=OB5gdu_ZINb67Cs9X2wihlV80siwBSusW6hMdUhXECk&cc=_H9BhgIh6p3VixJj7UUNmiqgFVZw7tGEqE5iZo2JkNk</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter verification code:  4/1AeaYSHCluEbV2vZbNTDGSs7f_Wi7stxW3T_fkKSruQO7ereHyr_92QpHUGc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
      ]
     }
    ],
